--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "construct": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "construct": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
